<resources>
    <string name="google_maps_key">AIzaSyDbgC6Wpccvko6L2kfsdk5A6J4Hzj4jV80</string>

    <string name="app_name">Geofencing Demo</string>
    <string name="title_activity_init">InitActivity</string>
    <!-- Strings used for fragments for navigation -->

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="circle">Circle</string>
    <string name="polygon">Polygon</string>
    <string name="set_polygon">Set Polygon</string>
    <string name="set_hole">Set Hole</string>
    <string name="set_geofence">Add Geofence</string>
</resources>